kubernetes/rpi-cluster/infrastructure/network/cilium/gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: private-gateway
spec:
  gatewayClassName: cilium
  addresses:
    - value: "${PRIVATE_GATEWAY_ADDRESS}"
  listeners:
    - name: internal-https
      port: 443
      protocol: HTTPS
      hostname: "*.${INTERNAL_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              networking.kubernetes.io/shared-gateway-access: "true"
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: "wildcard-internal-tls"
    - name: internal-pg
      port: 5432
      protocol: TCP
      hostname: "*.${INTERNAL_DOMAIN}"
      allowedRoutes:
        kinds:
          - kind: TCPRoute
        namespaces:
          from: Selector
          selector:
            matchLabels:
              networking.kubernetes.io/shared-gateway-access: "true"
